--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
 
+    implementation 'com.diogobernardino:williamchart:3.10.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     def nav_version = "2.5.3"
 
